<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kiddy Kids</string>
    <string name="my_food_app">My Food App</string>
    <string name="hello_explore_your_dream_food">Hello Explore Your Dream Food</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="forget_password">Forget Password</string>
    <string name="do_not_have_an_account">Do Not Have An Account ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="categorize_by_age">Categorize By Age</string>
    <string name="favourite">Favourite</string>
    <string name="my_cart">My cart</string>
    <string name="about_us">About Us</string>
    <string name="customize_package">Customize Package</string>
    <string name="mail">sungi@gmail.com</string>
    <string name="logout">Log Out</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="description">Food-delivery apps allow customers to order from a nearby restaurant at their convenience. The customers can get their order delivered, they can pick it up themselves or they can dine in. The restaurants receive the order on the restaurant app and prepare the meal.</string>
    <string name="top_features">The following are the top features of food delivery app:</string>

    <string name="_10_00_23_00">10:00-23:00</string>
</resources>